Styling changes to Shop component and Products, fixed margin auto, changes to gap and sizing to cards

--- a/src/components/Shop/Products.css
+++ b/src/components/Shop/Products.css
@@ -1,13 +1,18 @@
 .product-card{
     display: flex;
     flex-direction: column;
-    max-width: 300px;
     text-align: center;
-    margin: auto;
     box-shadow: 0 6.4px 14.4px 0 rgb(0 0 0 / 13%), 0 1.2px 3.6px 0 rgb(0 0 0 / 11%);
     font-family: 'Noto Sans', sans-serif;
     padding: 16px;
     transition: all .2s ease-in-out;
+    flex: 1;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 500px;
+    max-height: 600px;
+    min-width: 280px;
+    max-width: 300px;
 }
 
 .product-card:hover {
@@ -25,7 +30,6 @@
 }
 
 .product-card > button {
-
     display: inline-block;
     outline: none;
     cursor: pointer;
